# framewright

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tla.yml
cmake/: cvffmpegConfig.cmake.in  framewrightConfig.cmake.in
examples/: basic_read.cpp  basic_write.cpp  compare_readers.cpp  hdr_write.cpp
include/cvffmpeg/: LogLevel.h  VideoReader.h  VideoWriter.h  cvffmpeg.h
include/framewright/: LogLevel.h  VideoReader.h  VideoWriter.h  framewright.h
python/: bindings.cpp
python/cvffmpeg/: __init__.py
python/framewright/: __init__.py
python/tests/: test_bindings.py
specs/tla/: .gitignore  FailedSeek.cfg  Faithful50.cfg  NoPts.cfg  Overrun.cfg  README.md  VideoReaderSeek.cfg  VideoReaderSeek.tla
specs/tla/empirical/: results-after-fix.txt  results.txt  seek_probe.cpp
src/: LogLevel.cpp  VideoReader.cpp  VideoWriter.cpp
test_assets/: blue_bt709_lossless.mkv  green_bt709_lossless.mkv  magenta_bt709_lossless.mkv  red_bt709_lossless.mkv  skin_bt709_lossless.mkv
tests/: test_log_level.cpp  test_roundtrip.cpp  test_video_reader.cpp  test_video_writer.cpp
